<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rlRoot"
    android:layout_width="match_parent"
    android:layout_height="40dp">

    <LinearLayout
        android:id="@+id/llLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="visible">

        <ProgressBar
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginRight="2dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:text="@string/loading_more"
            android:textColor="@color/black"
            android:textSize="10sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvNoData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/loading_more_no_data"
        android:textColor="@color/black"
        android:textSize="10sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/loading_more_error_default"
        android:textColor="@color/black"
        android:textSize="10sp"
        android:visibility="gone" />

</RelativeLayout>