<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_white_bg"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="28dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:text="@string/set_cancel_account"
            android:textColor="@color/C_222222"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="@string/cancel_account_content"
            android:textColor="@color/C_222222"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_sure_cancel"
                android:layout_width="117dp"
                android:layout_height="38dp"
                android:background="@drawable/shape_white_radius8_stroke_1dp_999999"
                android:gravity="center"
                android:text="@string/sure_cancel_account"
                android:textColor="@color/C_222222"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="117dp"
                android:layout_height="38dp"
                android:layout_marginLeft="18dp"
                android:background="@drawable/shape_dialog"
                android:gravity="center"
                android:text="@string/dialog_cancel"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>