<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.android.app.component.setting.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/shape_white_radius8_stroke_1dp_999999">

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="11dp"
            android:src="@mipmap/ic_login_phone" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:hint="@string/input_phone_num"
            android:inputType="phone"
            android:text="17132192490"
            android:textColor="@color/C_666666"
            android:textColorHighlight="@color/C_dddddd"
            android:textColorHint="@color/C_BBBBBB"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/shape_white_radius8_stroke_1dp_999999">

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="11dp"
            android:src="@mipmap/ic_login_code" />

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/input_pwd"
            android:inputType="textPassword"
            android:text="123456"
            android:textColor="@color/C_666666"
            android:textColorHighlight="@color/C_dddddd"
            android:textColorHint="@color/C_BBBBBB"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/img_eye"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="15dp"
            android:src="@drawable/pwd_eye_selector" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@color/purple_200"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white" />


    <TextView
        android:id="@+id/tv_register"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@color/purple_200"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/white" />


</LinearLayout>